--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,8 @@ Build-Depends: debhelper (>= 9),
                libasound2-dev,
                libfltk1.3-dev,
                libjack-jackd2-dev | libjack-dev,
+               libpulse-dev,
+               librtmidi-dev,
                libsamplerate-dev,
                libsndfile1-dev,
                libxext-dev,
