--- a/debian/rules
+++ b/debian/rules
@@ -7,11 +7,11 @@
 override_dh_auto_configure:
 	dh_auto_configure -- --target=linux
 
-override_dh_auto_build:
-	cd src/rtmidi/ && autoreconf
-	chmod +x src/rtmidi/configure
-	cd src/ && $(MAKE) libs
-	dh_auto_build
+#override_dh_auto_build:
+#	cd src/rtmidi/ && autoreconf
+#	chmod +x src/rtmidi/configure
+#	cd src/ && $(MAKE) libs
+#	dh_auto_build
 
 override_dh_strip:
 	dh_strip --dbg-package=giada-dbg
