ignore: generated files keep mandatory ones
Signed-off-by: Philippe Coval <rzr@gna.org>

--- a/.gitignore
+++ b/.gitignore
@@ -4,15 +4,13 @@
 *.so.*
 *.orig
 *.rej
+*~
 src/rtaudio/librtaudio.pc
 src/rtaudio/rtaudio-config
-AUTHORS
 ERRORS
-README
 INSTALL
 Makefile
 Makefile.in
-NEWS
 compile
 aclocal.m4
 autom4te.cache/
@@ -37,5 +35,12 @@ src/.deps
 src/Makefile.in
 compile
 debian/*.log
+debian/*.postinst.debhelper
+debian/*.postrm.debhelper
+debian/*.substvars
+debian/*/*
 debian/autoreconf.after
 debian/autoreconf.before
+debian/files
+packaging/*/*
+
