--- a/debian/rules
+++ b/debian/rules
@@ -1,17 +1,26 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
 
+CXXFLAGS = -DRtMidiError=RtError
+DPKG_EXPORT_BUILDFLAGS = 1
+include /usr/share/dpkg/buildflags.mk
+export CXXFLAGS
+
 %:
 	dh $@ --parallel --with autoreconf
 
-override_dh_auto_configure:
+override_dh_auto_configure: src/rtaudio
 	dh_auto_configure -- --target=linux
+	touch $</tests/Makefile.in
+	cd  $< \
+	&& ./configure --target=linux --with-jack
 
-#override_dh_auto_build:
+override_dh_auto_build: src/rtaudio
+	make -C $< 
 #	cd src/rtmidi/ && autoreconf
 #	chmod +x src/rtmidi/configure
 #	cd src/ && $(MAKE) libs
-#	dh_auto_build
+	dh_auto_build
 
 override_dh_strip:
 	dh_strip --dbg-package=giada-dbg
